--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@types/styled-components": "^5.1.26",
+    "firebase": "^9.12.1",
     "next": "12.3.1",
+    "nextjs-progressbar": "^0.0.16",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "stripe": "^10.15.0",
     "styled-components": "^5.3.6"
   },
